--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
   "repository": "https://github.com/kolljohnson/euclidean-demo.git",
   "author": "kolljohnson <kjohnson@pillartechnology.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "yarn karma start karma.conf.js --single-run --no-auto-watch",
+    "build": "browserify euclidean.js -o bundle.js -t [ babelify --presets [ es2015 ] ]"
+  },
   "devDependencies": {
-    "euclidean-rhythms": "^2.0.1"
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "chai": "^4.1.0",
+    "euclidean-rhythms": "^2.0.1",
+    "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^5.1.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.4.2"
   }
 }
