--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "web-audio-test-api": "^0.5.2"
   }
 }
